<resources>
    <string name="app_name">Actividad_3</string>
    <string name="tv_titulo">Registro de usuarios</string>
    <string name="et_documento">DOCUMENTO</string>
    <string name="et_usuario">USUARIO</string>
    <string name="et_nombres">NOMBRES</string>
    <string name="et_apellidos">APELLIDOS</string>
    <string name="et_contra">CONTRASEÑA</string>
    <string name="bt_registrar">Registrar</string>
    <string name="bt_buscar">Modificar</string>
    <string name="bt_listar_registros">Buscar</string>
</resources>